fixed moonboxes align center issue

--- a/src/app/components/moonbase/ArtistLootBox/artist-moonbox/artist-moonbox.component.scss
+++ b/src/app/components/moonbase/ArtistLootBox/artist-moonbox/artist-moonbox.component.scss
@@ -1,120 +1,129 @@
 @import "includes";
-
 .scroller {
-  max-height: calc(100vh - 250px);
-  overflow: auto;
-  margin-top: 130px;
-  height: max-content;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  min-height: calc(100vh - 250px);
-  max-width: 90vw;
-  align-self: flex-start;
-  margin-left: auto;
-  margin-right: auto;
+    max-height: calc(100vh - 250px);
+    overflow: auto;
+    margin-top: 130px;
+    height: max-content;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 250px);
+    max-width: 90vw;
+    align-self: flex-start;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .scroller::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #090d16;
-  border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #090d16;
+    border-radius: 10px;
 }
 
 .scroller::-webkit-scrollbar {
-  width: 6px;
-  border-radius: 10px;
-  background-color: #090d16;
+    width: 6px;
+    border-radius: 10px;
+    background-color: #090d16;
 }
 
 .scroller::-webkit-scrollbar-thumb {
-  background-color: transparent;
+    background-color: transparent;
 }
 
-
 .align-start {
-  align-self: flex-start;
+    align-self: flex-start;
+}
+
+.all-boxes {
+    height: calc( 100vh - 440px) !important;
 }
 
 .img-small {
     width: 70px;
     height: 70px;
 }
+
 .connect_popup {
     background: #090d16;
     border-top: 6px solid #d5a642;
 }
+
 .border-thick:hover {
     border-bottom: 4px solid #d5a642;
 }
+
 .border-thick {
     cursor: pointer;
     border-bottom: 4px solid transparent;
 }
 
-  .mw-50 {
+.mw-50 {
     min-width: 50vw;
-  }
+}
 
-  .mh-75 {
+.mh-75 {
     max-height: 75vh;
-  }
-  
-  .img-cover {
+}
+
+.img-cover {
     max-height: 55vh;
     object-fit: cover;
-  }
-  .pt-3 {
+}
+
+.pt-3 {
     padding-top: 1rem;
-  }
-  #more path {
+}
+
+#more path {
     fill: #d5a642;
-  }
+}
+
 .moonbox {
-  width: 210px !important;
-  height: calc(12600px / 60) !important;
-  animation: animate 2s steps(60) infinite;
-  transition: all 1s ease;
-  cursor: pointer;
-  margin: 0 auto;
+    width: 210px !important;
+    height: calc(12600px / 60) !important;
+    animation: animate 2s steps(60) infinite;
+    transition: all 1s ease;
+    cursor: pointer;
+    margin: 0 auto;
 }
 
 .wood {
-  background-image: url('/assets/media/sprites/moonboxes/wood.png');
+    background-image: url('/assets/media/sprites/moonboxes/wood.png');
 }
 
 .silver {
-  background-image: url('/assets/media/sprites/moonboxes/silver.png');
+    background-image: url('/assets/media/sprites/moonboxes/silver.png');
 }
 
 .gold {
-  background-image: url('/assets/media/sprites/moonboxes/gold.png');
+    background-image: url('/assets/media/sprites/moonboxes/gold.png');
 }
 
 .diamond {
-  background-image: url('/assets/media/sprites/moonboxes/diamond.png');
+    background-image: url('/assets/media/sprites/moonboxes/diamond.png');
 }
 
 @keyframes animate {
-  from {
-      background-position-y: 0;
-  }
+    from {
+        background-position-y: 0;
+    }
+    to {
+        background-position-y: 12600px;
+    }
+}
 
-  to {
-      background-position-y: 12600px;
-  }
-}
 .bg-primary {
-  background-color: #000000;
+    background-color: #000000;
 }
+
 .invisible {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .artist-popup {
-  max-height: calc(100vh - 280px) !important;
-  min-height: calc(100vh - 280px) !important;
-  margin-top: 20px !important;
-  position: relative;
+    max-height: calc(100vh - 280px) !important;
+    min-height: calc(100vh - 280px) !important;
+    margin-top: 20px !important;
+    position: relative;
 }
